chat fixes: cleared the code, overlapped invites, blocked users, invite responses on fe, sliding messages on fe. todo: firefox compatibility with buttons, sliding msg, disable buttons after press, histoy?

--- a/srcs/frontend/www/css/chat.css
+++ b/srcs/frontend/www/css/chat.css
@@ -146,7 +146,7 @@ ul {
 }
 
 .message-invite-response {
-    background-color: #d4edda90;
+    background-color: #c9ffd690;
     color: #155724;
     padding: 5px;
     margin: 5px 0;
